Comolete my css with color, border, textstyle, image and background color.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <title>Unit 4, Part 2: HTML/CSS Practice</title>
     <!-- Create and link a CSS file! -->
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+    <div>
+      <h2>My name is Anthony</h2>
+      <img src="../img/sonic Small.jpeg">
+      <h3>My mode of transportation is the magnificent Chevy Sonic</h3>
+    </div>
+
   </body>
 </html>
